# algebraic-shape-operator

./: .gitmodules  LICENSE.md  README.md
.github/workflows/: c-cpp.yml
data/: bunny.ply
examples/: README.md
examples/Ponca/: CMakeLists.txt  example.h  main.cpp
examples/common/: KdTree.h  prog.h
examples/libigl/: CMakeLists.txt  example.h  main.cpp
examples/libigl/cmake/: libigl.cmake
examples/main/: CMakeLists.txt  example.h  main.cpp
examples/main/include/: log.h  opt.h  plyio.h
figures/: CMakeLists.txt  README.md
figures/app/Colorize/: ColorizeEstimations.cpp  ColorizeGroundtruth.cpp  ColorizeRadius.cpp
figures/app/Curvature/: ComputeCurvatures.cpp  ComputeErrors.cpp  ComputeStatistics.cpp
figures/app/Figures/: ComputeFlowPlane.cpp  ComputeFlowSphere.cpp  ComputeGeometricFeatures.cpp
figures/app/Generate/: AddNoise.cpp  generatorDGtal.cpp
figures/scripts/: .gitignore
figures/scripts/fig2_geometric-features/: generate.sh
figures/scripts/fig3_geometric-flows/: generate.sh
figures/scripts/fig4_asymptotic-analysis/: generate.sh  plot-H.py  plot-n.py  script01_generate_compute.sh  script02_errors_stats.sh  script03_plot.sh
figures/scripts/fig5_stability-noise-position/: script01_generate_compute.sh  script02_colorize.sh
figures/scripts/fig6_stability-noise-normal/: generate.sh  script01_generate_compute.sh  script02_colorize.sh
figures/src/Geogram/: SamplerLloyd.hpp
figures/src/PCP/Common/: Assert.h  Colors.h  Log.h  Log.inl  Macro.h  Option.cpp  Option.h  Option.hpp  Progress.cpp  Progress.h  Scalar.h  String.cpp  String.h  Timer.cpp  Timer.h  Timer.inl
figures/src/PCP/Common/Algorithm/: std_vector_algo.h
figures/src/PCP/Common/Container/: dynamic_stack.h  generic_stack.h  limited_priority_queue.h  static_stack.h
figures/src/PCP/Common/internal/: OptionArgument.cpp  OptionArgument.h  OptionArgumentT.h  OptionArgumentT.hpp  OptionVectorArgumentT.h  OptionVectorArgumentT.hpp
figures/src/PCP/Curvature/: Curvature.cpp  Curvature.h  CustomLoader.cpp  CustomLoader.h  GlobalCurvatureData.cpp  GlobalCurvatureData.h  GlobalErrorData.cpp  GlobalErrorData.h  GlobalEstimationData.cpp  GlobalEstimationData.h  GlobalStatisticsData.cpp  GlobalStatisticsData.h  MethodProperties.h  PointWiseCurvatureData.h  PointWiseErrorData.h  PointWiseEstimationData.h  Statistics.cpp  Statistics.h  Weight.h  compute_error.cpp  compute_error.h
figures/src/PCP/Curvature/Methods/: APSS.cpp  ASO.cpp  Barycenter.cpp  OJets.cpp  PCAPlane.cpp  PSS.cpp  VCM.cpp  VCM.h  WJets.cpp
figures/src/PCP/Geometry/: Defines.h  Geometry.cpp  Geometry.h  Loader.cpp  Loader.h  Normal.cpp  Normal.h  PLY.cpp  PLY.h  Point.cpp  Point.h  PointIterator.cpp  PointIterator.h  TXT.cpp  TXT.h  orthonormal_basis.h
figures/src/PCP/SpacePartitioning/: KdTree.cpp  KdTree.h  KnnGraph.cpp  KnnGraph.h
figures/src/PCP/SpacePartitioning/KdTree/: KdTreeNode.h
figures/src/PCP/SpacePartitioning/KdTree/Iterator/: KdTreeKNearestIndexIterator.cpp  KdTreeKNearestIndexIterator.h  KdTreeKNearestPointIterator.cpp  KdTreeKNearestPointIterator.h  KdTreeNearestIndexIterator.cpp  KdTreeNearestIndexIterator.h  KdTreeNearestPointIterator.cpp  KdTreeNearestPointIterator.h  KdTreeRangeIndexIterator.cpp  KdTreeRangeIndexIterator.h  KdTreeRangePointIterator.cpp  KdTreeRangePointIterator.h
figures/src/PCP/SpacePartitioning/KdTree/Query/: KdTreeKNearestIndexQuery.cpp  KdTreeKNearestIndexQuery.h  KdTreeKNearestPointQuery.cpp  KdTreeKNearestPointQuery.h  KdTreeNearestIndexQuery.cpp  KdTreeNearestIndexQuery.h  KdTreeNearestPointQuery.cpp  KdTreeNearestPointQuery.h  KdTreeQuery.cpp  KdTreeQuery.h  KdTreeRangeIndexQuery.cpp  KdTreeRangeIndexQuery.h  KdTreeRangePointQuery.cpp  KdTreeRangePointQuery.h
figures/src/PCP/SpacePartitioning/KnnGraph/Iterator/: KnnGraphRangeIterator.cpp  KnnGraphRangeIterator.h
figures/src/PCP/SpacePartitioning/KnnGraph/Query/: KnnGraphQuery.cpp  KnnGraphQuery.h  KnnGraphRangeQuery.cpp  KnnGraphRangeQuery.h
figures/src/PCP/SpacePartitioning/Query/: IndexQuery.cpp  IndexQuery.h  KNearestIndexQuery.cpp  KNearestIndexQuery.h  KNearestPointQuery.cpp  KNearestPointQuery.h  KNearestQuery.cpp  KNearestQuery.h  NearestIndexQuery.cpp  NearestIndexQuery.h  NearestPointQuery.cpp  NearestPointQuery.h  NearestQuery.h  PointQuery.cpp  PointQuery.h  RangeIndexQuery.cpp  RangeIndexQuery.h  RangePointQuery.cpp  RangePointQuery.h  RangeQuery.cpp  RangeQuery.h
figures/src/PCP/SpacePartitioning/internal/: IndexSquaredDistance.cpp  IndexSquaredDistance.h
include/: AlgebraicShapeOperator.h
